--- a/benchmarkCapacitorAngular/src/app/container/container.component.css
+++ b/benchmarkCapacitorAngular/src/app/container/container.component.css
@@ -29,7 +29,7 @@ button {
   justify-content: center;
   align-items: center;
   width: 100%;
-  height: 100vh;
+  height: 40px;
   border-bottom: 1px solid #ccc;
 }
 
